2014-04-25  H.J. Lu  <hongjiu.lu@intel.com>

	* sysdeps/x86/bits/link.h (La_x86_64_regs): Replace __int128
	with __int128_t.
	(La_x86_64_retval): Likewise.

2014-04-24  Ian Bolton  <ian.bolton@arm.com>

	* sysdeps/aarch64/fpu/fclrexcpt.c (feclearexcept): Don't write to
	fpsr if value didn't change.
	* sysdeps/aarch64/fpu/fedisblxcpt.c (fedisableexcept): Don't write
	to fpcr if value didn't change.
	* sysdeps/aarch64/fpu/feenablxcpt.c (feenableexcept): Likewise.
	* sysdeps/aarch64/fpu/feholdexcpt.c (feholdexcept): Don't write to
	fpsr or fpcr if value didn't change.
	* sysdeps/aarch64/fpu/fesetenv.c (fesetenv): Likewise.
	* sysdeps/aarch64/fpu/fesetround.c (fesetround): Don't write to
	fpcr if value didn't change.
	* sysdeps/aarch64/fpu/fsetexcptflg.c (fesetexceptflag): Don't write
	to fpsr if value didn't change.

2014-02-23  Siddhesh Poyarekar  <siddhesh@redhat.com>

	* nptl/tst-sem3.c: Use test-skeleton.c
	(main): Rename to do_test.  Use return instead of
	exit.
	* nptl/tst-sem4.c: Use test-skeleton.c
	(main): Rename to do_test.

2014-04-22  David S. Miller  <davem@davemloft.net>

	* sysdeps/unix/sysv/linux/sparc/bits/sigaction.h
	(struct sigaction): New struct member __glibc_reserved0, change
	type of sa_flags to int.

2014-04-22  Yufeng Zhang  <yufeng.zhang@arm.com>

	* stdlib/longlong.h (count_leading_zeros, count_trailing_zeros)
	(COUNT_LEADING_ZEROS_0): Define for AArch64.

2014-04-22  Siddhesh Poyarekar  <siddhesh@redhat.com>

	* nptl/sysdeps/unix/sysv/linux/sem_trywait.c: Include atomic.h.
	* nptl/sysdeps/unix/sysv/linux/sem_wait.c: Likewise.

2014-04-22  Will Newton  <will.newton@linaro.org>
	    Venkataramanan Kumar  <venkataramanan.kumar@linaro.org>

	* sysdeps/aarch64/__longjmp.S: Include stap-probe.h.
	(__longjmp): Add longjmp and longjmp_target SystemTap
	probes.
	* sysdeps/aarch64/setjmp.S: Include stap-probe.h.
	(__sigsetjmp): Add setjmp SystemTap probe.

2014-04-17  Carlos O'Donell  <carlos@redhat.com>
